syntax = "proto3";
package urlshortener;

option go_package = "github.com/Shobhit150/scalable_url_shortner/proto;urlshortenerpb";

service URLShortener {
  rpc Shorten (ShortenRequest) returns (ShortenResponse);
  rpc Redirect (RedirectRequest) returns (RedirectResponse);
  rpc GetStats (StatsRequest) returns (StatsResponse);
}

message ShortenRequest {
  string long_url = 1;
  string custom_slug = 2;
  string expires_at = 3; // ISO8601/RFC3339 (UTC). Optional.
}

message ShortenResponse {
  string slug = 1;
  
}

message RedirectRequest {
  string slug = 1;
  string ip_address = 2;
  string user_agent = 3;
  string referrer = 4;
}

message RedirectResponse {
  string long_url = 1;
  string expires_at = 2;
}

message StatsRequest {
  string slug = 1;
}
message StatsResponse {
  int32 clicks = 1;
  string expires_at = 2;
}
